# test

./: CMakeLists.txt  vcpkg.json
.github/workflows/: tests.yml
include/: lib.hpp
src/: lib.cpp
test/: CMakeLists.txt  test.cpp
